# hy-wx-demo

./: .gitignore  AppImageBuilder.yml  HOWTO.md  pyproject.toml  setup.iss
AppDir/: .DirIcon  AppRun.env  hywxdemo.desktop
AppDir/usr/share/applications/: hywxdemo.desktop
src/hy_wx_demo/: demo.hy  run.py
