[project]
name = "hy-wx-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Guto Marcicano",email = "caugmar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "hy (>=1.2.0,<2.0.0)",
    "hyrule (>=1.0.1,<2.0.0)",
    "eyed3 (>=0.9.9,<0.10.0)",
    "wxpython (>=4.2.5,<5.0.0)"
]

[tool.poetry]
packages = [{include = "hy_wx_demo", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks.run]
help = "Roda o programa principal"
cmd = "hy src/hy_wx_demo/demo.hy"


[dependency-groups]
dev = [
    "poethepoet (>=0.44.0,<0.45.0)",
]
