[project]
name = "hy-wx-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Guto Marcicano",email = "caugmar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "hy (>=1.2.0,<2.0.0)",
    "hyrule (>=1.0.1,<2.0.0)",
    "eyed3 (>=0.9.9,<0.10.0)",
    "wxpython (>=4.2.5,<5.0.0)"
]

[tool.poetry]
packages = [{include = "hy_wx_demo", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks.run]
help = "Roda o programa principal"
cmd = "hy src/hy_wx_demo/demo.hy"

[tool.poe.tasks.clean]
help = "Remove os artefatos de compilação"
cmd = "rm -rf appimage-build/ build/ dist/ AppDir/usr/bin/* *.AppImage"

[tool.poe.tasks.appimage]
help = "Cria a AppImage do projeto"
shell = """
    pyinstaller hy-wx-demo.spec
    cp -rv dist/HyWxDemo/* AppDir/usr/bin/ 
    appimage-builder
"""

[tool.poe.tasks.winstaller]
help = "Gera um instalador para Windows"
shell = "Start-Process \"$env:USERPROFILE\\AppData\\Local\\Programs\\Inno Setup 6\\ISCC.exe\" -ArgumentList \".\\setup.iss\" -NoNewWindow -Wait"
interpreter = "powershell"

[tool.poe.tasks.winclean]
help = "Remove os artefatos de compilação NO WINDOWS"
shell = "Remove-Item -Path .\\*.exe -Force -ErrorAction SilentlyContinue"
interpreter = "powershell"

[dependency-groups]
dev = [
    "poethepoet (>=0.44.0,<0.45.0)",
    "appimage-builder (>=1.1.0,<2.0.0)",
    "pyinstaller (>=6.20.0,<7.0.0)",
]
